package com.narxoz.rpg.observer;

public interface GameObserver {
    void onEvent(GameEvent event);
}